# sherlock

./: .gitmodules  LICENSE  README.md  pyproject.toml
sherlock/: diy-chain.ipynb  embed_data.py  langchain.ipynb
sherlock/.chroma/index/: id_to_uuid_bc88bbd0-5d10-42e2-82df-bef5ceebb059.pkl  id_to_uuid_eadca7e0-e86b-4683-9a71-72eedbcad988.pkl  index_metadata_bc88bbd0-5d10-42e2-82df-bef5ceebb059.pkl  index_metadata_eadca7e0-e86b-4683-9a71-72eedbcad988.pkl  uuid_to_id_bc88bbd0-5d10-42e2-82df-bef5ceebb059.pkl  uuid_to_id_eadca7e0-e86b-4683-9a71-72eedbcad988.pkl
sherlock/db/: chroma-collections.parquet
sherlock/db/index/: id_to_uuid_d3c0e605-940c-4054-a542-5117f40cbcc9.pkl  index_metadata_d3c0e605-940c-4054-a542-5117f40cbcc9.pkl  uuid_to_id_d3c0e605-940c-4054-a542-5117f40cbcc9.pkl
simple_repo/issues/: 1.md
simple_repo/src/: main.py
